--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 					
 					<div class="skills-list">
 						
-						<p>HTML, Javascript, PHP, MySQL, CSS, Bootstrap, JQuery, JSON, AJAX,CPanel, PHPMyAdmin, LAMP</p>
-						<p>Joomla!, Wordpress, Sublime Text, GIT, Netbeans, Eclipse, Aptana, Basecamp, AutoTask</p>
+						<p>HTML, Javascript, PHP, MySQL, CSS, Bootstrap, JQuery, JSON, AJAX, CPanel, PHPMyAdmin, LAMP</p>
+						<p>Sublime Text, GIT, Netbeans, Eclipse, Aptana, Joomla!, Wordpress, Basecamp, AutoTask</p>
 						<p>Adobe Creative Suite, MS Office, Mailchimp, Constant Contact, Google Analytics</p>
 					</div>	
 				</div>
