--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					
 					<div class="duties-list-item">
 						<p class="item-header">
-						<span class="company">SPC</span> - <span class="title">Web Developer</span> Blaine, Minnesota (October 2012-Present)
+						<span class="company">SPC</span> - <span class="title">Web Developer,</span> Blaine, Minnesota (October 2012-Present)
 					</p>
 						<ul>
 							<li>
@@ -84,7 +84,7 @@
 				
 					<div class="duties-list-item">
 						<p class="item-header">
-						<span class="company">ShopNBC</span> - <span class="title">Sales Manager / Managing Line Producer </span>, Eden Prairie, Minnesota (January 1996 - September 2009)
+						<span class="company">ShopNBC</span> - <span class="title">Sales Manager / Managing Line Producer,</span> Eden Prairie, Minnesota (January 1996 - September 2009)
 					</p><ul>
 							<li>
 								Created six hours per day of programming generating an average of $165,000 per hour
