adding new styles

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="container">
-		<header>
+	<main id="main" class="container">
+		<header id="top-heading">
 			<h3>Dave Gamberg</h3>
 			<h4>
 				<p>Shakopee, MN 55379 | 
@@ -17,11 +17,11 @@
 		</header>
 		<section>
 			<article id="experience">
-				<h4 class="area-title">Experience</h4>
+				<h4 class="area-title"><span class="icon glyphicon glyphicon-briefcase"></span>&nbsp;Experience</h4>
 				<div id="spc">
 					
 					<div class="duties-list-item">
-						<p class="item-header">
+					<p class="item-header">
 						<span class="company">SPC</span> - <span class="title">Web Developer,</span> Blaine, Minnesota (October 2012-Present)
 					</p>
 						<ul>
@@ -106,7 +106,7 @@
 				</div>
 			</article>
 			<article id="technical-skills">
-				<h4 class="area-title">Technical Skills</h4>
+				<h4 class="area-title"><span class="icon glyphicon glyphicon-blackboard"></span>&nbsp;Technical Skills</h4>
 				<div class="skills">
 					
 					<div class="skills-list">
@@ -118,7 +118,7 @@
 				</div>
 			</article>
 			<article id="certifications">
-				<h4 class="area-title">Certifications</h4>
+				<h4 class="area-title"><span class="icon glyphicon glyphicon-certificate"></span>&nbsp;Certifications</h4>
 				<div class="duties-list-item">
 					<ul>
 						<li>
@@ -134,7 +134,7 @@
 				</div>	
 			</article>
 			<article id="education" >
-				<h4 class="area-title">Education</h4>
+				<h4 class="area-title"><span class="icon glyphicon glyphicon-education"></span>&nbsp;Education</h4>
 				<div class="duties-list-item">
 					<p class="education-heading">
 	 					University of Hartford (June 1991), Hartford, CT
