--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 	<main id="main" class="container">
